# astc-encoder

./: CMakeLists.txt
Source/: astc_extras.cpp  astc_stb_tga.cpp  astc_toplevel.cpp
